# drupal-advisory-database

./: .gitignore  .osv-detector.yml  .prettierignore  .prettierrc.json  CONTRIBUTING.md  LICENSE  README.md  SOURCES.md  drupal-sa-to-osv.py  patches.toml  pyproject.toml  ruff.toml
.github/: renovate.json
.github/workflows/: ci.yml  generate.yml  scorecard.yml
advisories/access_code/: DRUPAL-CONTRIB-2025-028.json  DSA-CONTRIB-2025-028.json  DSA-CONTRIB-2025-108.json  osv-sa-contrib-2025-028.json
advisories/acl/: DRUPAL-CONTRIB-2023-034.json  DSA-CONTRIB-2023-034.json  osv-sa-contrib-2023-034.json
advisories/acquia_connector/: DRUPAL-CONTRIB-2019-014.json  DSA-CONTRIB-2019-014.json  osv-sa-contrib-2019-014.json
advisories/acquia_dam/: DRUPAL-CONTRIB-2024-025.json  DSA-CONTRIB-2024-025.json  DSA-CONTRIB-2025-105.json  osv-sa-contrib-2024-025.json
advisories/addtoany/: DRUPAL-CONTRIB-2019-039.json  DRUPAL-CONTRIB-2023-018.json  DRUPAL-CONTRIB-2023-019.json  DSA-CONTRIB-2019-039.json  DSA-CONTRIB-2023-018.json  DSA-CONTRIB-2023-019.json  osv-sa-contrib-2019-039.json  osv-sa-contrib-2023-018.json  osv-sa-contrib-2023-019.json
advisories/admin_audit_trail/: DRUPAL-CONTRIB-2025-068.json  DSA-CONTRIB-2025-068.json  osv-sa-contrib-2025-068.json
advisories/admin_toolbar/: DRUPAL-CONTRIB-2021-025.json  DSA-CONTRIB-2021-025.json  (+1 more)
scripts/: download_sa_advisories.py  download_sa_advisories2.py  generate_osv_advisories.py  generate_osv_advisories2.py  precache_nodes.py  test_generate_osv_advisories.py  user_agent.py  utils.py  validate_advisories.py
(+1637 files in other folders)
